--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -83,7 +83,19 @@
                 <li><a class="dropdown-item"  th:href="@{/cotacoes/por-data}">Consultar</a></li>
                </ul>
             </li>
+         
+         
+          <li class="nav-item dropdown" sec:authorize="hasRole('ADMIN')">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Administração
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" th:href="@{/admin/users}">Gerenciamento de Usuários</a></li>
+                        </ul>
+         
+         
           </ul>
+          
           
             <div class="container">
     			<form action="#"  th:action="@{/logout}" method="POST">
