--- a/src/main/resources/templates/admin/user-management.html
+++ b/src/main/resources/templates/admin/user-management.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>Gerenciamento de Usuários</title>
 </head>
 <body>
+
+<div id="navmenu" th:insert="~{navbar :: menu-principal}"> </div>
+
     <div class="container">
-        <h1>Gerenciamento de Usuários</h1>
+        <h3>Gerenciamento de Usuários</h3>
         
         <form th:action="@{/admin/users/save}" method="post">
             <div class="row mb-3">
