--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,126 +1,111 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.tymeleaf.org" xmlns:sec="http://www.tymeleaf.org/extras/spring-security" >
- <head>
+<html xmlns:th="http://www.tymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" >
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <title>APP DEVCEASA</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
-  <div th:fragment="menu-principal">
-	  
-  <body class="p-3 m-0 border-0 bd-example m-0 border-0">
+</head>
+<div th:fragment="menu-principal">
+<body class="p-3 m-0 border-0 bd-example m-0 border-0">
 
-
-	
-	<nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
         <a class="navbar-brand" href="/">CEASA</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
         </button>
-      
+        
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li>
-           <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Grupo
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/grupos/cadastrar}">Cadastro</a></li>
-                <li><a class="dropdown-item" th:href="@{/grupos/listar}">Listagem</a></li>
-                </ul>
-            </li>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Grupo
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" sec:authorize="hasRole('MANAGER')" th:href="@{/grupos/cadastrar}">Cadastro</a></li>
+                        <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/grupos/listar}">Listagem</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Subgrupo
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" sec:authorize="hasRole('MANAGER')" th:href="@{/subgrupos/cadastrar}">Cadastro</a></li>
+                        <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/subgrupos/listar}">Listagem</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Produto
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" sec:authorize="hasRole('MANAGER')" th:href="@{/produtos/cadastrar}">Cadastro</a></li>
+                        <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/produtos/listar}">Listagem</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Propriedade
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/propriedades/cadastrar}">Cadastro</a></li>
+                        <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/propriedades/listar}">Listagem</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Controle de Feiras
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/feiras/cadastrar}">Todas as feiras</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Cotação
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/cotacoes/cadastrar}">Cotação</a></li>
+                        <li><a class="dropdown-item" th:href="@{/cotacoes/por-data}">Consultar</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown" sec:authorize="hasRole('ADMIN')">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Administração
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:href="@{/admin/users}">Gerenciamento de Usuários</a></li>
+                    </ul>
+                </li>
+            </ul>
             
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Subgrupo
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/subgrupos/cadastrar}">Cadastro</a></li>
-                <li><a class="dropdown-item" th:href="@{/subgrupos/listar}">Listagem</a></li>
-                </ul>
-            </li>
+            <!-- Dropdown para usuário logado -->
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <span sec:authentication="principal.username"></span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/usuario/alterar-senha}">Trocar Senha</a></li>
+                        <li>
+                            <form th:action="@{/logout}" method="POST">
+                                <button type="submit" class="dropdown-item">Logout</button>
+                            </form>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
             
-           <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Produto
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/produtos/cadastrar}">Cadastro</a></li>
-                <li><a class="dropdown-item" th:href="@{/produtos/listar}">Listagem</a></li>
-                </ul>
-            </li>
-            
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Propriedade
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/propriedades/cadastrar}">Cadastro</a></li>
-                <li><a class="dropdown-item" th:href="@{/propriedades/listar}">Listagem</a></li>
-                </ul>
-            </li>       
-            
-             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-               Controle de Feiras
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/feiras/cadastrar}">Todas as feiras</a></li>
-              </ul>
-            </li>         
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Cotação
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" sec:authorize="hasRole('EMPLOYEE')" th:href="@{/cotacoes/cadastrar}">Cotação</a></li>
-                <li><a class="dropdown-item"  th:href="@{/cotacoes/por-data}">Consultar</a></li>
-               </ul>
-            </li>
-         
-         
-          <li class="nav-item dropdown" sec:authorize="hasRole('ADMIN')">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Administração
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" th:href="@{/admin/users}">Gerenciamento de Usuários</a></li>
-                        </ul>
-         
-         
-          </ul>
-          
-          
-            <div class="container">
-    			<form action="#"  th:action="@{/logout}" method="POST">
-    			  
-    			  <button value="Logout" type="submit" class="btn btn-secondary">
-    			  		
-    			  			<span sec:authentication="principal.username"></span> 
-    			  		
-    			  	</button>
-    			  
-    			  
-				
-   				 </form>
-  			</div>
-          
-          	 
-		
-				
-			
-			
-          
-          
         </div>
-      </div>
-    </nav>
+    </div>
+</nav>
 </div>
-  </body>
+</body>
 </html>
