--- a/src/main/resources/templates/produto/produto_listagem.html
+++ b/src/main/resources/templates/produto/produto_listagem.html
@@ -77,11 +77,11 @@
 						<td th:text="${produto.nome}" class="fonte-table"></td>
 						<td th:text="${produto.subgrupo.nome}" class="fonte-table"></td>
 
-						<td><a type="button" class="edit" title="Editar"
+						<td><a type="button" class="edit" title="Editar" sec:authorize="hasRole('MANAGER')"
 							th:href="@{/produtos/editar/{id} (id=${produto.id}) }"> <i
 								class="bi bi-pencil-square"></i>
 
-						</a> <a type="button" class="delete" title="Excluir"
+						</a> <a type="button" class="delete" title="Excluir" sec:authorize="hasRole('ADMIN')"
 							th:href="@{/produtos/excluir/{id} (id=${produto.id}) }"> <i
 								class="bi bi-trash3"></i>
 
