--- a/src/main/resources/templates/produto/produto_listar.html
+++ b/src/main/resources/templates/produto/produto_listar.html
@@ -50,10 +50,10 @@
 					<td th:text="${produto.id}"></td>
 					<td th:text="${produto.nome}"></td>
 					<td th:text="${produto.subgrupo.nome}"></td>
-					<td><a type="button" class="edit" title="Editar"
+					<td><a type="button" class="edit" title="Editar" sec:authorize="hasRole('MANAGER')"
 						th:href="@{/produtos/editar/{id} (id=${produto.id}) }"> <i
 							class="bi bi-pencil-square"></i>
-					</a> <a type="button" class="delete"
+					</a> <a type="button" class="delete" sec:authorize="hasRole('ADMIN')"
 						th:href="@{/produtos/excluir/{id} (id=${produto.id}) }"> <i
 							class="bi bi-trash3"></i>
 					</a> <!-- ESCONDENDO EXCLUIR	                	 <a type="button" class="delete" th:href="@{/ceasadev/produtos/excluir/{id} (id=${produto.id}) }" >
