--- a/src/main/resources/templates/subgrupo/subgrupo_cadastro.html
+++ b/src/main/resources/templates/subgrupo/subgrupo_cadastro.html
@@ -78,7 +78,7 @@
 					<td th:text="${sub.nome}"></td>
 					<td th:text="${sub.grupo.nome}"></td>
 					<td>
-						<a type="button" class="edit" title="Editar" th:href="@{/subgrupos/editar/{id} (id=${sub.id}) }" >
+						<a type="button" class="edit" title="Editar" sec:authorize="hasRole('MANAGER')" th:href="@{/subgrupos/editar/{id} (id=${sub.id}) }" >
 	                	<i class="bi bi-pencil-square"></i>
 	                	</a>
 	                 	<a type="button" class="delete"  title="Excluir" sec:authorize="hasRole('ADMIN')" th:href="@{/subgrupos/excluir/{id} (id=${sub.id}) }">
