--- a/src/main/resources/templates/admin/user-management.html
+++ b/src/main/resources/templates/admin/user-management.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>Gerenciamento de Usuários</title>
 </head>
 <body>
@@ -84,6 +84,11 @@
                             <button type="submit" class="btn" th:classappend="${user.enabled == 1 ? 'btn-warning' : 'btn-success'}">
                                 <span th:text="${user.enabled == 1 ? 'Desativar' : 'Ativar'}"></span>
                             </button>
+                        </form>
+                        <form th:action="@{/admin/users/changePassword}" method="post" class="d-inline">
+                            <input type="hidden" name="username" th:value="${user.username}" />
+                            <input type="password" name="newPassword" placeholder="Nova Senha" required />
+                            <button type="submit" class="btn btn-warning btn-sm">Alterar Senha</button>
                         </form>
                     </td>
                 </tr>
