Cotacao alterada cotacao Editar, cabeçalho do relatorio

--- a/src/main/resources/templates/cotacao/cotacao_listagemdata.html
+++ b/src/main/resources/templates/cotacao/cotacao_listagemdata.html
@@ -77,6 +77,8 @@
 					<th>Variedade</th>
 					<th>Subvar.</th>
 					<th>Classif.</th>
+					
+					<th>Peso Alterado</th>
 					<!-- Verificar se vai inserir os outros campos -->
 					<th>Preço Mínimo</th>
 					<th>Preço Máximo</th>
@@ -99,6 +101,7 @@
 					<td th:text="${cotacao.propriedade.variedade}"></td>
 					<td th:text="${cotacao.propriedade.subvariedade}"></td>
 					<td th:text="${cotacao.propriedade.classificacao}"></td>
+					<td th:text="${cotacao.pesoVariavel}"></td>
 					<td th:text="${cotacao.precoMinimo}"></td>
 					<td th:text="${cotacao.precoMaximo}"></td>
 					<td th:text="${cotacao.valorComum}"></td>
